[package]
name = "radroots-events-codec"
description = "Event codec layer for Radroots"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde", "radroots-core/serde", "radroots-events/serde"]
serde_json = ["serde", "dep:serde_json"]

[dependencies]
radroots-core = { workspace = true, default-features = false }
radroots-events = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
