[package]
name = "radroots-events-indexed"
description = "Indexed event model for Radroots"
version = "0.1.0"
authors = ["Radroots Authors"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["serde", "typeshare"]
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]
std = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { version = "1", optional = true }
