[package]
name = "radroots-events-indexed"
description = "Indexed event model for Radroots"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["serde", "typeshare"]
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]
std = []

[dependencies]
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { workspace = true, optional = true }
