[package]
name = "radroots_events"
publish = ["crates-io"]
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Domain event model for Radroots"
repository.workspace = true
homepage.workspace = true
readme = "README"

[features]
default = ["std", "serde"]
std = ["radroots_core/std"]
serde = ["dep:serde", "radroots_core/serde"]

[dependencies]
radroots_core = { workspace = true, default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { workspace = true, default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
serde_json = { workspace = true, default-features = false, features = [
  "alloc",
] }
sha2 = { workspace = true, default-features = false }

[dev-dependencies]
