[package]
name = "radroots-geocoder"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "Radroots Authors",
]
rust-version.workspace = true
license.workspace = true
description = "Location model for Radroots"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
