[package]
name = "radroots_geocoder"
publish = ["crates-io"]
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Location model for Radroots"
repository.workspace = true
homepage.workspace = true
readme = "README"

[dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
