[package]
name = "radroots_geocoder"
publish = ["crates-io"]
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Location model for Radroots"
repository.workspace = true
homepage.workspace = true
readme = "README"

[dependencies]
hex = { workspace = true }
radroots_runtime_paths = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
