[package]
name = "radroots-identity"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "Radroots Authors",
]
rust-version.workspace = true
license.workspace = true
description = "Identity model for Radroots"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
build = "build.rs"

[features]
default = ["std", "profile", "json-file", "nip49"]
std = ["dep:radroots-runtime-paths"]
profile = ["dep:radroots-events"]
json-file = ["std", "dep:radroots-runtime"]
nip49 = ["std", "nostr/nip49"]
secrecy = ["dep:secrecy"]
zeroize = ["dep:zeroize"]
ts-rs = ["dep:ts-rs"]

[dependencies]
radroots-runtime = { workspace = true, optional = true }
radroots-runtime-paths = { workspace = true, optional = true }
radroots-events = { workspace = true, optional = true, default-features = false, features = [
  "serde",
] }
nostr = { workspace = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
radroots-test-fixtures = { workspace = true }
tempfile = { workspace = true }
