[package]
name = "radroots_identity"
publish = ["crates-io"]
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Identity model for Radroots"
repository.workspace = true
homepage.workspace = true
readme = "README"

[features]
default = ["std", "profile", "json-file", "nip49"]
std = [
  "dep:radroots_protected_store",
  "dep:radroots_runtime_paths",
  "dep:radroots_secret_vault",
]
profile = ["dep:radroots_events"]
json-file = ["std", "dep:radroots_runtime"]
nip49 = ["std", "nostr/nip49"]
secrecy = ["dep:secrecy"]
zeroize = ["dep:zeroize"]

[dependencies]
radroots_runtime = { workspace = true, optional = true }
radroots_protected_store = { workspace = true, optional = true, features = [
  "std",
] }
radroots_runtime_paths = { workspace = true, optional = true }
radroots_secret_vault = { workspace = true, optional = true, features = [
  "std",
] }
radroots_events = { workspace = true, optional = true, default-features = false, features = [
  "serde",
] }
nostr = { workspace = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
